--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "1.41.3",
     "connect-flash": "0.1.1",
+    "dotenv": "^16.4.5",
     "ejs": "3.1.10",
     "ejs-mate": "4.0.0",
     "express": "4.19.2",
     "express-session": "1.18.0",
     "joi": "17.13.3",
     "method-override": "3.0.0",
-    "mongoose": "8.5.1",
+    "mongoose": "^7.8.0",
+    "multer": "1.4.5-lts.1",
+    "multer-storage-cloudinary": "4.0.0",
     "passport": "0.7.0",
     "passport-local": "1.0.0",
     "passport-local-mongoose": "8.0.0"
