--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "passport-local": "1.0.0",
     "passport-local-mongoose": "8.0.0",
     "sanitize-html": "^2.13.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
