--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "yelpcamp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "Deyner Cruz",
   "license": "ISC",
